# C_Cpp_Examples

./: .gitignore  README.md
Add-Two-Numbers_UserInput_ConsoleApp/: Add-Two-Numbers_UserInput_ConsoleApp.cpp  Add-Two-Numbers_UserInput_ConsoleApp.sln  Add-Two-Numbers_UserInput_ConsoleApp.vcxproj  Add-Two-Numbers_UserInput_ConsoleApp.vcxproj.filters  README.md
Add-Two-Numbers_UserInput_ConsoleApp/Debug/: Add-Two-Numbers_UserInput_ConsoleApp.exe.recipe  Add-Two-Numbers_UserInput_ConsoleApp.ilk  Add-Two-Numbers_UserInput_ConsoleApp.vcxproj.FileListAbsolute.txt  vc142.idb
Add-Two-Numbers_UserInput_ConsoleApp/Debug/Add-Two-.52743854.tlog/: Add-Two-Numbers_UserInput_ConsoleApp.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CMake_0_HelloWorld/: HelloWorld_CMake_basic.cpp  README.md
CMake_1_CMake-Cmds-1/: CMakeLists.txt  README.md
CMake_1_CMake-Cmds-1/src/: greet.cpp  main.cpp
CMake_2_Static_Library/: CMakeLists.txt  README.md
CMake_2_Static_Library/src/: HelloStatic.cpp
CMake_3_CMake-Cmds-3/: README.md
CMake_3_LibNSubDirs/: CMakeLists.txt
CMake_3_LibNSubDirs/libs/: CMakeLists.txt
CMake_3_LibNSubDirs/libs/src/hello/: hello.cpp  hello.hpp
CMake_3_LibNSubDirs/src/: main.cpp
CMake_4_GTest/: README.md
CMake_4_WithHeaders/: README.md
CMake_5_Static_Library/include/static/: HelloStatic.h
CMake_5_Static_Library/src/: main.cpp
CMake_6_LibNSubDirs/: README.md
CMake_6_LibNSubDirs/src/: CMakeLists.txt
CMake_7_GTest/: Example.hpp
CMake_7_GTest/test/: CMakeLists.txt  ExampleTests.cpp
CMake_8_GTest-n-WordSearchInScripts/: CMakeLists.txt
CMake_8_GTest-n-WordSearchInScripts/src/: CMakeLists.txt
File_Handling/: File_Handling.sln  README.md
File_Handling/Debug/: studentsRec.txt
File_Handling/File_Handling/: File_Handling.cpp  File_Handling.vcxproj  File_Handling.vcxproj.filters  studentsRec.txt
File_Handling/File_Handling/Debug/: File_Handling.exe.recipe  File_Handling.ilk  vc142.idb
File_Handling/File_Handling/Debug/File_Handling.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  File_Handling.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HelloWorld_CMake_basic/: CMakeLists.txt  HelloWorld_CMake_basic.h
HelloWorld_ConsoleApp/: HelloWorld_ConsoleApp.cpp  HelloWorld_ConsoleApp_Cpp.vcxproj  HelloWorld_ConsoleApp_Cpp.vcxproj.filters  README.md
HelloWorld_ConsoleApp/Debug/: HelloWorld_ConsoleApp.exe.recipe  HelloWorld_ConsoleApp.ilk  HelloWorld_ConsoleApp_Cpp.vcxproj.FileListAbsolute.txt  vc142.idb
HelloWorld_ConsoleApp/Debug/HelloWor.11f0c255.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HelloWorld_ConsoleApp.lastbuildstate  HelloWorld_ConsoleApp_Cpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HelloWorld_ConsoleApp_Cpp/: HelloWorld_ConsoleApp_Cpp.sln  HelloWorld_ConsoleApp_Cpp.vcxproj  HelloWorld_ConsoleApp_Cpp.vcxproj.filters
HelloWorld_ConsoleApp_Cpp/Debug/: HelloWorld_ConsoleApp_Cpp.exe.recipe  HelloWorld_ConsoleApp_Cpp.ilk  HelloWorld_ConsoleApp_Cpp.vcxproj.FileListAbsolute.txt  vc142.idb
HelloWorld_ConsoleApp_Cpp/Debug/HelloWor.11f0c255.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Pointer_basic_ConsoleApp/: Pointer_basic_ConsoleApp.sln  Pointer_basic_ConsoleApp.vcxproj  Pointer_basic_ConsoleApp.vcxproj.filters  README.md
Pointer_basic_ConsoleApp/Debug/: Pointer_basic_ConsoleApp.exe.recipe  Pointer_basic_ConsoleApp.ilk  Pointer_basic_ConsoleApp.vcxproj.FileListAbsolute.txt  vc142.idb
Pointer_basic_ConsoleApp/Debug/Pointer_.a1313975.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Pointer_basic_ConsoleApp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Pointer_basic_ConsoleApp/src/: Pointer_basic_ConsoleApp.cpp
Proj_Basic_LibNSubDirs/: CMakeLists.txt  README.md
Proj_Basic_LibNSubDirs/libs/: CMakeLists.txt
Proj_Basic_LibNSubDirs/libs/src/hello/: hello.cpp
Proj_Basic_LibNSubDirs/src/: CMakeLists.txt  main.cpp
Proj_GTest-N-CMake/: CMakeLists.txt  Example.cpp  README.md
Proj_Intermediate-2/: CMakeLists.txt  README.md
Proj_WordSearchInScripts/: README.md
Projs_Basic/1_HelloWorld/: CMakeLists.txt  main.cpp
Projs_Basic/2_WithHeaders/: CMakeLists.txt
Projs_Basic/2_WithHeaders/include/: HelloWorld.h
Projs_Basic/2_WithHeaders/src/: HelloWorld.cpp  main.cpp
