# CMakeList.txt : CMake project for HelloWorld_CMake_basic, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("HelloWorld_CMake_basic")

# Add source to this project's executable.
add_executable (HelloWorld_CMake_basic "HelloWorld_CMake_basic.cpp" "HelloWorld_CMake_basic.h")

# TODO: Add tests and install targets if needed.
